--- a/recircle-cardscan-backend/requirements.txt
+++ b/recircle-cardscan-backend/requirements.txt
@@ -17,6 +17,7 @@ poppler-utils==0.1.0
 
 # Image Processing
 Pillow==10.1.0
+opencv-python==4.8.1.78
 
 # OCR - Tesseract (Local, Free)
 pytesseract==0.3.10
