--- a/recircle-cardscan-backend/requirements.txt
+++ b/recircle-cardscan-backend/requirements.txt
@@ -42,3 +42,8 @@ google-generativeai==0.8.3
 
 # Optional: Azure Computer Vision (if you want to use instead of Tesseract)
 # azure-cognitiveservices-vision-computervision==0.9.0
+
+# MySQL Database
+sqlalchemy==2.0.23
+mysqlclient==2.2.0
+alembic==1.12.1
